# ompi-peanuts

ompi/mca/hook/peanuts/: Makefile.am  configure.m4  hook_peanuts.h  hook_peanuts_component.c  hook_peanuts_fns.c  owner.txt
ompi/mca/hook/pmembb/: Makefile.am  configure.m4  hook_pmembb.h  hook_pmembb_component.c  hook_pmembb_fns.c
